20/settings/web-landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-landing
  namespace: webserver
  labels:
    app: web-landing
spec:
  selector:
    app: web-landing
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
