20/settings/web-landing-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-landing
  namespace: webserver
  labels:
    app: web-landing
spec:
  host: exoplanets-declarative-manifests.apps.ocp4.example.com
  to:
    kind: Service
    name: web-landing
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
